--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "react-big-calendar": "^1.11.4",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
