--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
     "next-themes": "^0.3.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-date-range": "^2.0.1",
