fix: Corregir bucle infinito en Vercel install
- Usar npm install --prefix quincenalia en lugar de cd quincenalia && npm install
- Eliminar script install del package.json raíz para evitar bucle
- Simplificar configuración de workspace

--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
   "scripts": {
     "dev": "cd quincenalia && npm run dev",
     "build": "cd quincenalia && npm run build",
-    "preview": "cd quincenalia && npm run preview",
-    "install": "cd quincenalia && npm install"
-  },
-  "workspaces": [
-    "quincenalia"
-  ]
+    "preview": "cd quincenalia && npm run preview"
+  }
 }
