--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "buildCommand": "cd quincenalia && npm run build",
   "outputDirectory": "quincenalia/dist",
-  "installCommand": "cd quincenalia && npm install",
+  "installCommand": "npm install --prefix quincenalia",
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
   ]
