--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "cd quincenalia && npm run build",
-  "outputDirectory": "quincenalia/dist",
-  "installCommand": "npm install --prefix quincenalia",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
   ]
