--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.3.0",
     "firebase": "^10.13.0",
+    "framer-motion": "^12.23.25",
     "input-otp": "^1.2.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
